# ChangeLog for dev-db/mongodb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jul 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -mongodb-0.9.6.ebuild, +mongodb-0.9.7.ebuild,
  files/modify-post-strip.patch:
  Version bump

  27 Jul 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  +mongodb-0.9.6.ebuild, +files/modify-post-strip.patch,
  +files/modify-testing.patch, +files/mongodb.confd, +files/mongodb.initd,
  +metadata.xml:
  New ebuild for bug 273259. Thanks to scarabeus and ssuominen
