@@ -3,6 +3,6 @@ AUX modify-testing.patch 1276 RMD160 a4cfdad3b9c6102d28f487ad009aabef581eabeb SH
 AUX mongodb.confd 285 RMD160 cc5e3ab24a9880a19392a7416d23d1ae7a328e11 SHA1 7c4b720ea5b0afd2fa88a6adc2d8a2e356691413 SHA256 8dfedbb433e11f8ed6ec8159ed5c02f94c22f86006cda21f0b2bb59ebe50b2ad
 AUX mongodb.initd 1024 RMD160 cd38a158302270c75d2e12360f6d7fab259aca66 SHA1 f841675161b318ee7647e028df38b03ae6e4c647 SHA256 a9136dbcbd9626d80988c2f46c73af6b2f23bc4af52c9f68d33d2feaa1649dcb
 DIST mongodb-0.9.7.tar.gz 3904991 RMD160 b71d52af72ad8b41bd72a5fe47f1e34de7bb27e8 SHA1 bd8541bb1b899d839263a61247b7696a15a5eea2 SHA256 d423ee0cc8f935ebb5e9ee2f873b9dac28ded4f0990a7daa003964d8a4c8af2a
-EBUILD mongodb-0.9.7.ebuild 1327 RMD160 71a09eed7c25675deca21ec1f5daaaed14ce25ab SHA1 b0fee0740fb0d038dad6812783c6e97b46199a7d SHA256 13402e069d8aafa3386b028f15bdd00b6f2700f9e179f95ffa34cc7ead22063a
-MISC ChangeLog 559 RMD160 9d40cd01779e7992244abc2c557ddc35f0d09104 SHA1 802fc5f74473cbee85d5b228e7ecd54c94f06da4 SHA256 91dd1341a36561207d6b0e6de4f3b835208d3aa3b01d617b0827c6f7550f351c
+EBUILD mongodb-0.9.7.ebuild 1255 RMD160 38eb77eb78ac21588ca07434dca74776970a6b25 SHA1 1d2809ea72e0dd9786f118e104ad172456993c93 SHA256 3c1c76bef78ff2bcd03809e2d56645a7695ad6b6e27d72bd7218803d0acd0147
+MISC ChangeLog 723 RMD160 65d935c983a726e5d543b5046bdbbd0434ad6d40 SHA1 658963a736522d5a95f0b0c92e761d98a2f2929d SHA256 72d5a1d265cded7e75c76a35cb98a5927369bc88ccbf65e7f96a934b545cd7e6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
