@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
+  mongodb-0.9.7.ebuild:
+  Remove scons hack since MAKEOPTS are safe to pass. Thanks to Tommy[D]
+
   31 Jul 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
   -mongodb-0.9.6.ebuild, +mongodb-0.9.7.ebuild,
   files/modify-post-strip.patch:
